# vulkan-example

./: .gitignore  Cargo.toml  README.md  justfile
src/: main.rs  render_graph.rs
src/shaders/: fxaa.comp  fxaa.comp.spv  generate_draws.comp  generate_draws.comp.spv  grayscale.comp  grayscale.comp.spv  mesh.mesh  mesh.mesh.spv  mesh.task  mesh.task.spv  quad.frag  quad.frag.spv  quad.vert  quad.vert.spv  triangle.frag  triangle.vert  triangle.vert.spv
